chore: refactor all .gitignore files into single top-level .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,20 @@
 **/*.out
 *.tar.gz
 **/*.tar.zst
+**/preflight.sh
+**/*.zip
+**/checksums.txt
+**/*.log
+**/extract-terraform.sh
+**/on_failure.sh
 ~/
 .DS_Store
-defense-unicorns-distro/preflight.sh
-.terraform
 tmp
 zarf-sbom
 .idea
-**/checksums.txt
-**/*.log
 setenv-*.sh
+run
+eksctl
+test-out.sh
+bigbang.dev.cert
+bigbang.dev.key
