wip: update paths for infra CI workflow to ignore test-infra/eks

--- a/.github/workflows/ci-on-pull-request-infra.yaml
+++ b/.github/workflows/ci-on-pull-request-infra.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - ".github/test-infra/**"
+      - "!.github/test-infra/eks/*"
       - ".github/workflows/ci-on-pull-request-infra.yaml"
       - ".github/workflows/terraform-lint.yaml"
 
