Adding default velero configuration that assumes S3. Removing ENABLED flag.

--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -32,14 +32,14 @@ variables:
     prompt: false
     type: file
     autoIndent: true
-  - name: VELERO_ENABLED
-    description: "Toggles velero on and off"
-    default: "true"
   - name: VELERO_S3_BUCKET
-    description: "AWS S3 bucket for use with Velero"
+    description: "AWS S3 (or compatible) bucket for use with Velero"
     #default: "Intentionally no default value is configured"
   - name: VELERO_S3_AWS_REGION
-    description: "Region of the AWS S3 bucket for use with Velero"
+    description: "Region of the bucket for use with Velero"
+    #default: "Intentionally no default value is configured"
+  - name: VELERO_S3_AWS_ROLE_ARN
+    description: "Role to use when connecting to the Velero bucket (credentials can alternatively be provided via secret)"
     #default: "Intentionally no default value is configured"
 
 components:
@@ -51,6 +51,23 @@ components:
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: rke2-preflight
+    required: true
+    actions:
+      onDeploy:
+        before:
+          - cmd: "./zarf tools kubectl get secret -n velero velero-bucket-credentials >/dev/null 2>&1 && echo true || echo false"
+            mute: true
+            description: "Checking for expected velero bucket credentials secret..."
+            setVariables:
+              - name: HAS_VELERO_CREDENTIALS
+        after:
+          - cmd: ./rke2-preflight.sh
+          - cmd: rm rke2-preflight.sh
+    files:
+      - source: scripts/rke2-preflight.sh
+        target: rke2-preflight.sh
+        executable: true
   - name: load-certs
     required: true
     import:
