--- a/rke2/values/rke2-velero-s3.yaml
+++ b/rke2/values/rke2-velero-s3.yaml
@@ -1,8 +1,8 @@
 addons:
   velero:
-    enabled: "###ZARF_VAR_VELERO_ENABLED###"
+    enabled: true
     plugins:
-      - csi
+      - aws
     values:
       configuration:
         backupStorageLocation:
@@ -11,17 +11,11 @@ addons:
             bucket: "###ZARF_VAR_VELERO_S3_BUCKET###"
             config:
               region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
-            credential:
-              name: velero-bucket-credentials
-              key: accessKey
         volumeSnapshotLocation:
           - name: default
             provider: aws
             config:
               region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
-            credential:
-              name: velero-bucket-credentials
-              key: accessKey
       credentials:
         useSecret: false
       schedules:
@@ -38,3 +32,8 @@ addons:
               - flux
               - velero
             ttl: "240h"
+      serviceAccount:
+        server:
+          create: true
+          annotations:
+            eks.amazonaws.com/role-arn: "###ZARF_VAR_VELERO_S3_AWS_ROLE_ARN###"
