--- a/rke2/zarf-config.yaml
+++ b/rke2/zarf-config.yaml
@@ -8,6 +8,9 @@ package:
       bigbang_version: "2.15.1"
       # should line up with the flux version in the BB release, see https://repo1.dso.mil/big-bang/bigbang/-/blob/master/base/flux/gotk-components.yaml#L3
       flux_version: "2.1.2"
+
+  # Deploy values are DELETED AND RESET dynamically in `.github/workflows/test-dubbd-rke2-install.yaml` for CI
+  # These are included here for ease of use for local dev and other deployments.
   deploy:
     set:
       # -- Domain name for the cluster
