--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -46,6 +46,14 @@ jobs:
           download-init-package: true
           timeout-minutes: 60
 
+      - uses: ./.github/actions/create-zarf-package
+        with:
+          username: ${{ secrets.REGISTRY1_USERNAME }}
+          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          working-dir: rke2/test-deps/minio
+          download-init-package: true
+          timeout-minutes: 60
+
       - name: Create RKE2 cluster
         env:
           SHA: ${{ github.sha }}
@@ -60,36 +68,24 @@ jobs:
           terraform apply -auto-approve
           kubectl apply -k "github.com/kubernetes-sigs/aws-ebs-csi-driver/deploy/kubernetes/overlays/stable/?ref=release-1.21"
           kubectl apply -f storage-class.yaml
-
-          # gather the bucket outputs
-          VELERO_BUCKET=$(terraform output -raw velero_bucket_name)
-          VELERO_BUCKET_KEY=$(terraform output -raw velero_bucket_access_key)
-          VELERO_BUCKET_KEY_SECRET=$(terraform output -raw velero_bucket_access_key_secret)
-
-          # inject them into the config
-          rm ../../../rke2/zarf-config.yaml
-          cat << EOF > ../../../rke2/zarf-config.yaml
-          log-level: info
-          architecture: amd64
-          package:
-            deploy:
-              set:
-                domain: bigbang.dev
-                key_file: bigbang.dev.key
-                cert_file: bigbang.dev.cert
-                ephemeral: false
-                VELERO_BUCKET=$VELERO_BUCKET
-                VELERO_BUCKET_REGION=us-west-2
-                VELERO_BUCKET_BUCKET_KEY=$VELERO_BUCKET_KEY
-                VELERO_BUCKET_KEY_SECRET=$VELERO_BUCKET_KEY_SECRET
-          EOF
         working-directory: .github/test-infra/rke2
 
       - name: Zarf init
         run: zarf init -a amd64 --components=git-server --confirm
 
+      - name: Deploy minio on RKE2 cluster
+        run: zarf package deploy zarf-package-*.tar.zst
+        working-directory: rke2/test-deps/minio
+        timeout-minutes: 60
+
       - name: Deploy DUBBD on RKE2 cluster
-        run: zarf package deploy zarf-package-*.tar.zst --confirm
+        run: |
+          zarf package deploy zarf-package-*.tar.zst \
+          --confirm \
+          --set VELERO_BUCKET=minio.minio.svc.cluster.local:9000/velero \
+          --set VELERO_BUCKET_REGION=us-west-2
+          --set VELERO_BUCKET_KEY=admin
+          --set VELERO_BUCKET_KEY_SECRET=changeme
         working-directory: rke2
         timeout-minutes: 60
 
