--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -74,7 +74,7 @@ jobs:
         run: zarf init -a amd64 --components=git-server --confirm
 
       - name: Deploy minio on RKE2 cluster
-        run: zarf package deploy zarf-package-*.tar.zst
+        run: zarf package deploy zarf-package-*.tar.zst --confirm
         working-directory: rke2/test-deps/minio
         timeout-minutes: 60
 
