--- a/rke2/values/rke2-velero-s3.yaml
+++ b/rke2/values/rke2-velero-s3.yaml
@@ -4,6 +4,14 @@ addons:
     plugins:
       - aws
     values:
+      credentials:
+        useSecret: true
+        name: "velero-bucket-credentials"
+        secretContents:
+          cloud: |
+            [default]
+            aws_access_key_id=###ZARF_VAR_VELERO_BUCKET_KEY###
+            aws_secret_access_key=###ZARF_VAR_VELERO_BUCKET_KEY_SECRET###
       configuration:
         backupStorageLocation:
           - name: default
@@ -11,13 +19,17 @@ addons:
             bucket: "###ZARF_VAR_VELERO_S3_BUCKET###"
             config:
               region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
+            credential:
+              name: "velero-bucket-credentials"
+              key: "cloud"
         volumeSnapshotLocation:
           - name: default
             provider: aws
             config:
               region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
-      credentials:
-        useSecret: false
+            credential:
+              name: "velero-bucket-credentials"
+              key: "cloud"
       schedules:
         udsbackup:
           disabled: false
@@ -32,8 +44,3 @@ addons:
               - flux
               - velero
             ttl: "240h"
-      serviceAccount:
-        server:
-          create: true
-          annotations:
-            eks.amazonaws.com/role-arn: "###ZARF_VAR_VELERO_S3_AWS_ROLE_ARN###"
