--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -100,6 +100,10 @@ jobs:
           # manually kick off a backup and wait for it to complete
           velero backup create --wait --from-schedule udsbackup
 
+          # display status for the logs
+          velero backup describe
+        timeout-minutes: 10
+
       - name: Remove DUBBD from RKE2 cluster
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
