--- a/rke2/values/rke2-velero-s3.yaml
+++ b/rke2/values/rke2-velero-s3.yaml
@@ -16,9 +16,9 @@ addons:
         backupStorageLocation:
           - name: default
             provider: aws
-            bucket: "###ZARF_VAR_VELERO_S3_BUCKET###"
+            bucket: "###ZARF_VAR_VELERO_BUCKET###"
             config:
-              region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
+              region: "###ZARF_VAR_VELERO_BUCKET_REGION###"
             credential:
               name: "velero-bucket-credentials"
               key: "cloud"
@@ -26,7 +26,7 @@ addons:
           - name: default
             provider: aws
             config:
-              region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
+              region: "###ZARF_VAR_VELERO_BUCKET_REGION###"
             credential:
               name: "velero-bucket-credentials"
               key: "cloud"
