--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -14,33 +14,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/create-zarf-package
-        with:
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: k3d
-          download-init-package: true
-          timeout-minutes: 60
+      - name: Setup Environment
+        uses: .github/actions/setup
 
-      - name: Install k3d
-        shell: bash
-        run: curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.6.0 bash
-
-      - name: Create k3d cluster
-        run: zarf package deploy oci://ghcr.io/defenseunicorns/packages/uds-k3d:0.1.12-multi --confirm
-        timeout-minutes: 60
-
-      - name: Zarf Init
-        run: zarf init --components=git-server --confirm
-        timeout-minutes: 60
-
-      - name: Deploy DUBBD on k3d cluster
-        run: zarf package deploy zarf-package-*.tar.zst --confirm
+      - name: Test k3d package
         working-directory: k3d
-        timeout-minutes: 60
-
-      - name: Remove DUBBD from k3d cluster
-        if: always()
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: k3d
-        timeout-minutes: 60
+        run: uds run test-k3d-pkg
