--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -112,7 +112,7 @@ jobs:
             # local testing indicates the status is "Finalizing" for a few seconds after completion
             sleep 30
 
-            # check again..
+            # check again...
             STATUS=$(zarf tools kubectl get backups -A -o json | jq -r '(.items | last).status.phase')
             if [[ ${STATUS} != "Completed" ]]; then
               echo "Status is $STATUS... something isn't right.."
