--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Environment
-        uses: .github/actions/setup
+        uses: ./.github/actions/setup
 
       - name: Test k3d package
         working-directory: k3d
