--- a/k3d/tasks/deploy.yaml
+++ b/k3d/tasks/deploy.yaml
@@ -2,7 +2,7 @@ variables:
   - name: VERSION
     description: "The version of the packages to deploy"
     # x-release-please-start-version
-    default: "0.6.0"
+    default: "0.14.0"
     # x-release-please-end
 
 tasks:
@@ -11,4 +11,4 @@ tasks:
       - description: "Deploy the requested Zarf Package"
         cmd: |
           set -e
-          zarf package deploy zart-package-dubbd-k3d-*.tar.zst --confirm
+          zarf package deploy zart-package-dubbd-k3d-amd64-${VERSION}.tar.zst --confirm
