--- a/k3d/tasks/create.yaml
+++ b/k3d/tasks/create.yaml
@@ -3,4 +3,4 @@ tasks:
     description: "Create k3d zarf package"
     actions:
       - description: "Create the requested Zarf Package"
-        cmd: "zarf package create . --confirm"
+        cmd: zarf package create . -o build/ --confirm
