--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -99,9 +99,9 @@ jobs:
             --set ephemeral="true" \
             --set name="${{ steps.get_cluster_name.outputs.eks_cluster_name }}" \
             --set region="us-west-2" \
-            --set state_bucket_name="uds-ci-state-bucket" \
+            --set state_bucket_name="uds-aws-ci-commercial-us-west-2-5246-tfstate" \
             --set state_key="tfstate/ci/install/${SHA:0:7}-dubbd-aws.tfstate" \
-            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --set state_dynamodb_table_name="uds-aws-ci-commercial-org-us-west-2-5246-tfstate-lock" \
             --confirm
 
             # adds ZARF_PACKAGE_DEPLOY_SET env var for use in zarf package deploy
