--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -63,9 +63,9 @@ jobs:
             -backend-config="key=tfstate/ci/install/${SHA:0:7}-rke2.tfstate" \
             -backend-config="region=us-west-2" \
             -backend-config="dynamodb_table=uds-ci-state-dynamodb"
-          terraform plan
+          terraform plan -var-file=old_org.tfvars
           sleep 15 # time to review
-          terraform apply -auto-approve
+          terraform apply var-file=old_org.tfvars -auto-approve
           kubectl apply -k "github.com/kubernetes-sigs/aws-ebs-csi-driver/deploy/kubernetes/overlays/stable/?ref=release-1.21"
           kubectl apply -f storage-class.yaml
         working-directory: .github/test-infra/rke2
@@ -215,9 +215,9 @@ jobs:
             -backend-config="key=tfstate/ci/install/${SHA:0:7}-rke2.tfstate" \
             -backend-config="region=us-west-2" \
             -backend-config="dynamodb_table=uds-aws-ci-commercial-org-us-west-2-5246-tfstate-lock"
-          terraform plan
+          terraform plan -var-file=new_org.tfvars
           sleep 15 # time to review
-          terraform apply -auto-approve
+          terraform apply -var-file=new_org.tfvars -auto-approve
           kubectl apply -k "github.com/kubernetes-sigs/aws-ebs-csi-driver/deploy/kubernetes/overlays/stable/?ref=release-1.21"
           kubectl apply -f storage-class.yaml
         working-directory: .github/test-infra/rke2
