--- a/.github/test-infra/eks/zarf.yaml
+++ b/.github/test-infra/eks/zarf.yaml
@@ -7,6 +7,10 @@ metadata:
 variables:
   - name: CLUSTER_NAME
     prompt: true
+  - name: PERMISSIONS_BOUNDARY_ARN
+    default: ""
+  - name: PERMISSIONS_BOUNDARY_NAME
+    default: ""
 
 components:
   - name: load-eksctl
