I missed a stupid pound sign in the stupid Zarf variable for the stupid permissions boundary name.

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -6,7 +6,7 @@ metadata:
   region: us-west-2
   version: "1.26"
   tags:
-    PermissionsBoundary: "##ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
+    PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
 
 # May want to look at this for testing
 # privateCluster:
