Add permissions boundary and tag to managed node group and role for eksctl.

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -36,3 +36,7 @@ managedNodeGroups:
     instanceType: m5.2xlarge
     desiredCapacity: 3
     volumeSize: 150
+    tags:
+      PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
+    iam:
+      instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
