ci: update refs to creds

--- a/.github/workflows/publish.dubbd.package.yaml
+++ b/.github/workflows/publish.dubbd.package.yaml
@@ -37,8 +37,8 @@ jobs:
       - name: Create DUBBD Package
         uses: ./.github/actions/create-zarf-package
         with:
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
+          password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
           working-dir: ${{ inputs.working_dir }}
 
       - name: Login to GHCR
