--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -41,8 +41,8 @@ jobs:
       - uses: ./.github/actions/create-zarf-package
         name: Create CI-DUBBD-IAC-AWS Zarf package
         with:
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
+          password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
           working-dir: .github/test-infra/ci-dubbd-iac-aws
           download-init-package: true
           timeout-minutes: 60
@@ -50,8 +50,8 @@ jobs:
       - uses: ./.github/actions/create-zarf-package
         name: Create DUBBD-AWS Zarf package
         with:
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
+          password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
           working-dir: aws/dubbd-aws
           download-init-package: true
           timeout-minutes: 60
