Refactor use new AWS org for CI (#652)
* refactor: Use new org CI account.

* Use new RKE2 RHEL AMI.

* Use new org role for CI.

* Revert backend changes on old CI jobs.

* Remove unused code.

* Fixing old RKE2 CI infra.

* Forgot workflow file changes for RKE2.

* Small tweaks.

* Forgot to add var file for destroy.

* Add Zarf variables for permissions boundary ARN and tag to pass to eksctl.

* I missed a stupid pound sign in the stupid Zarf variable for the stupid permissions boundary name.

* Properly setting Zarf vars to prevent empty string for eksctl config.

* I forgot to add the zarf vars to the upgrade workflow.

* Add permissions boundary to eksctl addon Role and fix old DUBBD upgrade workflow backend.

* Add sleep before removing cluster to see what went wrong.

* Add permissions boundary and tag to CNI addon for eksctl.

* Add permissions boundary and tag to managed node group and role for eksctl.

* Pass permissions boundary to loki and velero for CI.

* Remove permissions boundary for CI IaC for upgrade workflow and add RKE2 user data.

* Fixing RKE2 userdata because I'm stupid.

* Use IB Robot creds for new account workflows.

* Trying to fix CCM for RKE2 infra.

--- a/.github/test-infra/ci-dubbd-iac-aws/zarf.yaml
+++ b/.github/test-infra/ci-dubbd-iac-aws/zarf.yaml
@@ -25,6 +25,10 @@ variables:
     description: "Name of the DynamoDB table used for Terraform state locking"
   - name: REGION
     description: "The AWS region to run the Terraform in"
+  - name: PERMISSIONS_BOUNDARY_NAME
+    default: ""
+  - name: USE_PERMISSIONS_BOUNDARY
+    default: "true"
 
   - name: EPHEMERAL
     description: "Set whether the cluster should be considered ephemeral - if true all resources will be force destroyed on removal"
