--- a/.github/test-infra/eks/zarf.yaml
+++ b/.github/test-infra/eks/zarf.yaml
@@ -7,6 +7,8 @@ metadata:
 variables:
   - name: CLUSTER_NAME
     prompt: true
+  - name: PERMISSIONS_BOUNDARY_ARN
+  - name: PERMISSIONS_BOUNDARY_NAME
 
 components:
   - name: load-eksctl
