ci: failed dubbd removal shouldn't fail the workflow

--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -39,3 +39,4 @@ jobs:
       - name: Remove k3d pkg
         working-directory: k3d
         run: uds run remove-k3d-pkg
+        continue-on-error: true
