--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -273,11 +273,11 @@ components:
         after:
           - cmd: |
               if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
-                ./zarf tools kubectl apply -f neuvector-controller-pa.yaml
+                ./zarf tools kubectl delete -f neuvector-controller-pa.yaml 2>/dev/null || true
               fi
               rm neuvector-controller-pa.yaml
             mute: true
-            description: "Add PeerAuthentication for NeuVector Controller on upgrade"
+            description: "Remove PeerAuthentication for NeuVector Controller before BigBang v2.18.0 upgrade"
     files:
       - source: manifests/neuvector-controller-pa.yaml
         target: neuvector-controller-pa.yaml
@@ -351,6 +351,7 @@ components:
               ./zarf tools kubectl delete helmrelease -n bigbang metrics-server --ignore-not-found --timeout=20m
               ./zarf tools kubectl delete apiservices.apiregistration.k8s.io -l helm.toolkit.fluxcd.io/namespace=bigbang,helm.toolkit.fluxcd.io/name=metrics-server --ignore-not-found --timeout=20m
               ./zarf tools kubectl delete gitrepositories -n bigbang -l app.kubernetes.io/part-of=bigbang --ignore-not-found --timeout=20m
+              ./zarf tools kubectl delete helmcharts.source.toolkit.fluxcd.io -n bigbang bigbang-bigbang --timeout=20m
             description: "Cleaning up Big Bang resources"
             maxTotalSeconds: 3600 # 1 hour
         after:
